[package]
name = "control-freak"
version = "0.1.0"
authors = ["Nick Remijn <nick.remijn@gmail.com>", "Ruben van Arkel?"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = [
    "esp-idf-svc/embassy-sync",
    "esp-idf-svc/critical-section",
    "esp-idf-svc/embassy-time-driver",
]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.47.3", default-features = false }
anyhow = "1.0.75"
embedded-graphics = "0.8.1"
ssd1351 = { version = "0.4.2", features = ["graphics", "buffered"] }
embedded-graphics-core = "0.4.0"
display-interface = "0.4.1"
embedded-graphics-framebuf = "0.5.0"
channel-bridge = { version = "0.6.0", default-features = false, features = [
    "nightly",
    "embedded-svc",
] }
embedded-svc = { version = "0.26", features = ["nightly", "experimental"] }
esp-idf-hal = { version = "0.42.5", features = [
    "nightly",
    "wake-from-isr",
    "critical-section",
] }

edge-executor = { version = "0.4.1" }
serde = "1.0.193"
heapless = { version = "0.8.0", features = ["serde"] }

[build-dependencies]
embuild = "0.31.3"
